--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,7 +3,7 @@
     android:id="@+id/drawerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="right"
+    android:layout_gravity="left"
     android:layout_marginLeft="60dp"
     android:background="@color/white"
     android:orientation="vertical">
@@ -17,29 +17,30 @@
         android:gravity="left|center">
 
         <ImageView
-            android:id="@+id/iv_schedule"
+            android:id="@+id/iv_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/space15"
-            android:src="@drawable/ic_arrow_left_black" />
+            android:src="@drawable/ic_subject_white"
+            android:background="@android:color/transparent"/>
 
         <TextView
-            android:id="@+id/tv_email"
+            android:id="@+id/tv_name"
             fontPath="fonts/SourceSansPro-SemiBold.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/space15"
             android:layout_toRightOf="@+id/iv_schedule"
-            android:text="Categories"
+            android:text="Name Goes Here"
             android:textColor="@android:color/white"
             android:textSize="@dimen/txt_20" />
 
     </LinearLayout>
 
     <ListView
-        android:id="@+id/list_slidermenu"
+        android:id="@+id/lv_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_nav_header"
