--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#F0592F</color>
+    <color name="colorPrimaryDark">#F0592F</color>
+    <color name="colorAccent">#CDF0592F</color>
 
     <color name="orange">#F0592F</color>
-    <color name="colorP">#CDF0592F</color>
     <color name="green">#64a843</color>
     <color name="blue">#3791de</color>
     <color name="red">#C14244</color>
