This is Android App Arc with Dagger2, RxJava, Retrofit2 and MVP

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.official.noowenz.home.view.HomeActivity">
+    tools:context="com.official.noowenz1.home.view.HomeActivity">
 
     <LinearLayout
         android:id="@+id/ll_news"
