--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,4 +17,16 @@
         android:textColor="@color/black_effective"
         android:textSize="@dimen/txt_20" />
 
+    <TextView
+        android:id="@+id/tv_msg2"
+        android:layout_below="@+id/tv_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="@dimen/space10"
+        android:gravity="center"
+        android:text=""
+        android:textColor="@color/black_effective"
+        android:textSize="@dimen/txt_20" />
+
 </RelativeLayout>
